raised version of BtBase

--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,18 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>NetRelay-Demoproject</name>
+	<name>NetRelay-DemoProject</name>
 
 	<parent>
 		<groupId>de.braintags</groupId>
 		<artifactId>btVertxBasePOM</artifactId>
-		<version>13-SNAPSHOT</version>
+		<version>15-SNAPSHOT</version>
 	</parent>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<netrelay.version>10.0.0-SNAPSHOT</netrelay.version>
+		
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.test.skip>false</maven.test.skip>
 		<doc.skip>false</doc.skip>
 		<source.skip>false</source.skip>
