--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
 	<properties>
 		<netrelay.version>10.0.0-SNAPSHOT</netrelay.version>
-		
+		<netrelayController.version>1.0.0-SNAPSHOT</netrelayController.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.test.skip>false</maven.test.skip>
 		<doc.skip>false</doc.skip>
@@ -29,6 +29,12 @@
 			<groupId>de.braintags</groupId>
 			<artifactId>netrelay</artifactId>
 			<version>${netrelay.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>de.braintags</groupId>
+			<artifactId>NetRelayController</artifactId>
+			<version>${netrelayController.version}</version>
 		</dependency>
 
 		<dependency>
