--- a/src/main/resources/fairytale-settings.json
+++ b/src/main/resources/fairytale-settings.json
@@ -8,7 +8,6 @@
     "properties" : {
       "startMongoLocal" : "false",
       "handleReferencedRecursive" : "true",
-      "localPort" : "27018",
       "connection_string" : "mongodb://localhost:27017",
       "shared" : "false"
     },
@@ -16,23 +15,35 @@
   },
   "routerDefinitions" : {
     "routerDefinitions" : [ {
-      "name" : "CookieController",
+      "name" : "FavIconController",
+      "controller" : "de.braintags.netrelay.controller.FavIconController",
       "active" : true,
+      "httpMethod" : null,
+      "routes" : [ "/favicon.ico" ],
+      "blocking" : false,
+      "failureDefinition" : false,
+      "handlerProperties" : {
+        "path" : "webroot/favicon.ico"
+      },
+      "captureCollection" : null
+    }, {
+      "name" : "CookieController",
+      "controller" : "de.braintags.netrelay.controller.CookieController",
+      "active" : true,
+      "httpMethod" : null,
       "routes" : null,
       "blocking" : false,
       "failureDefinition" : false,
-      "controller" : "de.braintags.netrelay.controller.impl.CookieController",
-      "httpMethod" : null,
       "handlerProperties" : { },
       "captureCollection" : null
     }, {
       "name" : "SessionController",
+      "controller" : "de.braintags.netrelay.controller.SessionController",
       "active" : true,
+      "httpMethod" : null,
       "routes" : null,
       "blocking" : false,
       "failureDefinition" : false,
-      "controller" : "de.braintags.netrelay.controller.impl.SessionController",
-      "httpMethod" : null,
       "handlerProperties" : {
         "expiration" : "30 m",
         "sessionStore" : "LOCAL_SESSION_STORE"
@@ -40,209 +51,72 @@
       "captureCollection" : null
     }, {
       "name" : "TimeoutController",
+      "controller" : "de.braintags.netrelay.controller.TimeoutController",
       "active" : true,
+      "httpMethod" : null,
       "routes" : null,
       "blocking" : false,
       "failureDefinition" : false,
-      "controller" : "de.braintags.netrelay.controller.impl.TimeoutController",
-      "httpMethod" : null,
       "handlerProperties" : {
         "timeout" : "30000"
       },
       "captureCollection" : null
     }, {
       "name" : "BodyController",
+      "controller" : "de.braintags.netrelay.controller.BodyController",
       "active" : true,
+      "httpMethod" : null,
       "routes" : null,
       "blocking" : false,
       "failureDefinition" : false,
-      "controller" : "de.braintags.netrelay.controller.impl.BodyController",
-      "httpMethod" : null,
       "handlerProperties" : { },
-      "captureCollection" : null
-    }, {
-      "name" : "PersistenceController",
-      "active" : true,
-      "routes" : [ "/persistenceController/:entity/:ID/:action/read.html" ],
-      "blocking" : true,
-      "failureDefinition" : false,
-      "controller" : "de.braintags.netrelay.controller.impl.persistence.PersistenceController",
-      "httpMethod" : null,
-      "handlerProperties" : {
-        "uploadRelativePath" : "images/",
-        "uploadDirectory" : "webroot/images/",
-        "reroute" : "true",
-        "cleanPath" : "true"
-      },
-      "captureCollection" : [ {
-        "captureDefinitions" : [ {
-          "captureName" : "entity",
-          "controllerKey" : "mapper",
-          "required" : false
-        }, {
-          "captureName" : "ID",
-          "controllerKey" : "ID",
-          "required" : false
-        }, {
-          "captureName" : "action",
-          "controllerKey" : "action",
-          "required" : false
-        }, {
-          "captureName" : "selectionSize",
-          "controllerKey" : "selectionSize",
-          "required" : false
-        }, {
-          "captureName" : "selectionStart",
-          "controllerKey" : "selectionStart",
-          "required" : false
-        }, {
-          "captureName" : "orderBy",
-          "controllerKey" : "orderBy",
-          "required" : false
-        } ]
-      } ]
-    }, {
-      "name" : "MailController",
-      "active" : true,
-      "routes" : [ "/api/sendmail" ],
-      "blocking" : false,
-      "failureDefinition" : false,
-      "controller" : "de.braintags.netrelay.controller.impl.api.MailController",
-      "httpMethod" : null,
-      "handlerProperties" : {
-        "templateDirectory" : "templates",
-        "inline" : "true",
-        "mode" : "XHTML",
-        "cacheEnabled" : "true",
-        "from" : "address@sender.com"
-      },
       "captureCollection" : null
     }, {
       "name" : "StaticController",
+      "controller" : "de.braintags.netrelay.controller.StaticController",
       "active" : true,
-      "routes" : [ "/static/*", "/favicon.ico" ],
+      "httpMethod" : null,
+      "routes" : [ "/static/*" ],
       "blocking" : false,
       "failureDefinition" : false,
-      "controller" : "de.braintags.netrelay.controller.impl.StaticController",
-      "httpMethod" : null,
       "handlerProperties" : {
-        "cacheEnabled" : "true"
-      },
-      "captureCollection" : null
-    }, {
-      "name" : "AuthenticationController",
-      "active" : true,
-      "routes" : [ "/member/*" ],
-      "blocking" : false,
-      "failureDefinition" : false,
-      "controller" : "de.braintags.netrelay.controller.impl.authentication.AuthenticationController",
-      "httpMethod" : null,
-      "handlerProperties" : {
-        "loginAction" : "/member/login",
-        "logoutAction" : "/member/logout",
-        "passwordField" : "password",
-        "collectionName" : "usertable",
-        "loginPage" : "/member/login",
-        "authProvider" : "MongoAuth",
-        "roleField" : "roles",
-        "usernameField" : "username",
-        "logoutDestinationPage" : "/index.html"
-      },
-      "captureCollection" : null
-    }, {
-      "name" : "RegisterController",
-      "active" : true,
-      "routes" : [ "/customer/doRegister", "/customer/verifyRegistration" ],
-      "blocking" : false,
-      "failureDefinition" : false,
-      "controller" : "de.braintags.netrelay.controller.impl.authentication.RegisterController",
-      "httpMethod" : null,
-      "handlerProperties" : {
-        "regStartFailUrl" : "/customer/registerFail.html",
-        "allowDuplicateEmail" : "false",
-        "regStartSuccessUrl" : "/customer/registerSuccess.html",
-        "passwordField" : "password",
-        "collectionName" : "Member",
-        "authProvider" : "MongoAuth",
-        "regConfirmSuccessUrl" : "/customer/registerConfirmSuccess.html",
-        "usernameField" : "email",
-        "authenticatableClass" : "de.braintags.netrelay.model.Member",
-        "regConfirmFailUrl" : "/customer/registerConfirmFail.html"
-      },
-      "captureCollection" : null
-    }, {
-      "name" : "PasswordLostController",
-      "active" : true,
-      "routes" : [ "/customer/passwordLost", "/customer/passwordReset" ],
-      "blocking" : false,
-      "failureDefinition" : false,
-      "controller" : "de.braintags.netrelay.controller.impl.authentication.PasswordLostController",
-      "httpMethod" : null,
-      "handlerProperties" : {
-        "pwLostSuccessUrl" : "/customer/passwordLostSuccess.html",
-        "pwLostFailUrl" : "/customer/passwordLostFail.html",
-        "emailFieldName" : "email",
-        "pwResetFailUrl" : "/customer/passwordResetFail.html",
-        "pwResetSuccessUrl" : "/customer/passwordResetSuccess.html",
-        "authenticatableClass" : "de.braintags.netrelay.model.Member"
-      },
-      "captureCollection" : null
-    }, {
-      "name" : "CurrentMemberController",
-      "active" : true,
-      "routes" : [ ],
-      "blocking" : false,
-      "failureDefinition" : false,
-      "controller" : "de.braintags.netrelay.controller.impl.CurrentMemberController",
-      "httpMethod" : null,
-      "handlerProperties" : { },
-      "captureCollection" : null
-    }, {
-      "name" : "HelloWorld",
-      "active" : true,
-      "routes" : [ "/helloWorld.html"],
-      "blocking" : false,
-      "failureDefinition" : false,
-      "controller" : "de.braintags.netrelay.fairytale.controller.HelloWorldController",
-      "httpMethod" : null,
-      "handlerProperties" : {
-        "helloProperty" : "myProperty"
-      },
-      "captureCollection" : null
-    }, {
-      "name" : "ThymeleafTemplateController",
-      "active" : true,
-      "routes" : [ "/*" ],
-      "blocking" : false,
-      "failureDefinition" : false,
-      "controller" : "de.braintags.netrelay.controller.impl.ThymeleafTemplateController",
-      "httpMethod" : null,
-      "handlerProperties" : {
-        "templateDirectory" : "templates",
-        "mode" : "XHTML",
-        "contentType" : "text/html",
         "cacheEnabled" : "true"
       },
       "captureCollection" : null
     }, {
       "name" : "FailureController",
+      "controller" : "de.braintags.netrelay.controller.FailureController",
       "active" : true,
+      "httpMethod" : null,
       "routes" : null,
       "blocking" : false,
       "failureDefinition" : true,
-      "controller" : "de.braintags.netrelay.controller.impl.FailureController",
-      "httpMethod" : null,
       "handlerProperties" : { },
       "captureCollection" : null
-    } ]
+    }, {
+      "name" : "ThymeleafTemplateController",
+      "routes" : [ "/*" ],
+      "blocking" : false,
+      "failureDefinition" : false,
+      "controller" : "de.braintags.netrelay.controller.ThymeleafTemplateController",
+      "httpMethod" : null,
+      "handlerProperties" : {
+        "templateDirectory" : "templates",
+        "mode" : "XHTML",
+        "contentType" : "text/html",
+        "cacheEnabled" : "false"
+      },
+      "captureCollection" : null
+    }    
+     ]
   },
   "processorDefinitons" : {
     "processorDefinitions" : [ {
       "name" : "dummyprocessor",
       "processorClass" : null,
-      "cancelOnError" : false,
       "timeDef" : "60000",
       "active" : false,
+      "cancelOnError" : false,
       "processorProperties" : {
         "demoKey" : "demoValue"
       }
@@ -268,8 +142,6 @@
     "name" : "NetRelay MailClient"
   },
   "mappingDefinitions" : {
-    "mapperMap" : {      
-      "Member" : "de.braintags.netrelay.model.Member"
-    }
+    "mapperMap" : { }
   }
 }
