--- a/src/main/resources/fairytale-settings.json
+++ b/src/main/resources/fairytale-settings.json
@@ -50,28 +50,6 @@
       },
       "captureCollection" : null
     }, {
-      "name" : "AuthenticationController",
-      "routes" : [ 
-      				"/member/*"      				      		
-      			 ],
-      "blocking" : false,
-      "failureDefinition" : false,
-      "controller" : "de.braintags.netrelay.controller.authentication.AuthenticationController",
-      "httpMethod" : null,
-      "handlerProperties" : {
-        "loginPage" : "/login.html",
-        "logoutAction" : "/logout",
-        "logoutDestinationPage": "/login.html",
-        "directLoggedInOKURL": "/index.html",
-        "roleField" : "roles",
-        "collectionName" : "Member",
-        "loginAction" : "/login",
-        "passwordField" : "password",
-        "usernameField" : "userName",
-        "authProvider" : "MongoAuth"
-      },
-      "captureCollection" : null
-    }, {
       "name" : "TimeoutController",
       "controller" : "de.braintags.netrelay.controller.TimeoutController",
       "active" : true,
@@ -94,6 +72,40 @@
       "handlerProperties" : { },
       "captureCollection" : null
     }, {
+      "name" : "PersistenceController",
+      "routes" : [ "/fairytale/index.html", "/fairytale/detail.html", "/fairytale/delete"  ],
+      "controller" : "de.braintags.netrelay.controller.persistence.PersistenceController",
+      "handlerProperties" : {
+        "mapperfactory" : "de.braintags.netrelay.mapping.NetRelayMapperFactory",
+        "reroute" : "false",
+        "cleanPath" : "true",
+        "uploadDirectory" : "webroot/upload/",
+        "uploadRelativePath" : "upload/"
+      },
+      "captureCollection" : [ {
+        "captureDefinitions" : [ {
+          "captureName" : "entity",
+          "controllerKey" : "mapper",
+          "required" : false
+        }, {
+          "captureName" : "ID",
+          "controllerKey" : "ID",
+          "required" : false
+        }, {
+          "captureName" : "action",
+          "controllerKey" : "action",
+          "required" : false
+        } ]
+      } ]
+    }, {
+      "name" : "RedirectController",
+      "routes" : [ "/fairytale/delete" ],
+      "controller" : "de.braintags.netrelay.controller.RedirectController",
+      "handlerProperties" : {
+        "destination" : "/fairytale/index.html?entity=FairyTale",
+        "reusePathParameters": false
+      }
+    }, {
       "name" : "StaticController",
       "controller" : "de.braintags.netrelay.controller.StaticController",
       "active" : true,
@@ -115,6 +127,41 @@
       "failureDefinition" : true,
       "handlerProperties" : { },
       "captureCollection" : null
+    }, {
+      "name" : "AuthenticationController",
+      "routes" : [ 
+      				"/member/*"      				      		
+      			 ],
+      "controller" : "de.braintags.netrelay.controller.authentication.AuthenticationController",
+      "handlerProperties" : {
+        "loginPage" : "/login.html",
+        "logoutAction" : "/logout",
+        "logoutDestinationPage": "/login.html",
+        "directLoggedInOKURL": "/index.html",
+        "roleField" : "roles",
+        "collectionName" : "Member",
+        "loginAction" : "/login",
+        "passwordField" : "password",
+        "usernameField" : "email",
+        "authProvider" : "MongoAuth"
+      }
+    }, 
+    {
+      "name" : "RegisterController",
+      "routes" : [ "/doRegister","/verifyRegistration"],
+      "controller" : "de.braintags.netrelay.controller.authentication.RegisterController",
+      "handlerProperties" : {
+        "regStartFailUrl" : "/registrationError.html",
+        "regStartSuccessUrl" : "/registrationSuccess.html",
+        "regConfirmSuccessUrl" : "confirmRegSuccess.html",
+        "regConfirmFailUrl" : "/confirmRegFailure.html",
+        "authenticatableClass" : "de.braintags.netrelay.model.Member",                          	
+        	"templateDirectory" : "templates",
+        	"template": "/mails/verifyEmail.html",
+        	"mode" : "XHTML",
+        	"from" : "registration@braintags.de",
+        	"subject": "fairytale registration: Email-confirmation"     	 
+     	}
     }, {
       "name" : "ThymeleafTemplateController",
       "routes" : [ "/*" ],
@@ -145,13 +192,9 @@
     } ]
   },
   "mailClientSettings" : {
-    "hostname" : "localhost",
-    "port" : 25,
-    "starttls" : "OPTIONAL",
+    "starttls" : "DISABLED",
     "login" : "NONE",
     "authMethods" : null,
-    "username" : null,
-    "password" : null,
     "ssl" : false,
     "trustAll" : false,
     "keyStore" : null,
@@ -160,10 +203,13 @@
     "maxPoolSize" : 10,
     "keepAlive" : true,
     "allowRcptErrors" : false,
-    "active" : false,
+    "active" : true,
     "name" : "NetRelay MailClient"
   },
   "mappingDefinitions" : {
-    "mapperMap" : { }
+    "mapperMap" : { 
+    	"FairyTale" : "de.braintags.netrelay.fairytale.model.FairyTale",
+    	"Member" : "de.braintags.netrelay.model.Member"
+     }
   }
 }
