--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>NetRelayDemoProject</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.2.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>NetRelay-DemoProject</name>
@@ -11,12 +11,12 @@
 	<parent>
 		<groupId>de.braintags</groupId>
 		<artifactId>btVertxBasePOM</artifactId>
-		<version>17</version>
+		<version>19-SNAPSHOT</version>
 	</parent>
 
 	<properties>
-		<netrelay.version>10.1.0</netrelay.version>
-		<netrelayController.version>1.1.0</netrelayController.version>
+		<netrelay.version>10.2.0-SNAPSHOT</netrelay.version>
+		<netrelayController.version>1.2.0-SNAPSHOT</netrelayController.version>
 		
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.test.skip>false</maven.test.skip>
