--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<netrelay.version>10.2.0-SNAPSHOT</netrelay.version>
 		<netrelayController.version>1.2.0-SNAPSHOT</netrelayController.version>
+		<thymeleaf.version>3.0.1.RELEASE</thymeleaf.version>
 		
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.test.skip>false</maven.test.skip>
@@ -57,6 +58,12 @@
 	      <artifactId>log4j</artifactId>
 	      <version>1.2.17</version>
 	      <scope>compile</scope>
+	    </dependency>
+	    
+	    <dependency>
+	      <groupId>org.thymeleaf</groupId>
+	      <artifactId>thymeleaf</artifactId>
+	      <version>${thymeleaf.version}</version>
 	    </dependency>
 	</dependencies>
 
