Remove user specific path from config

--- a/src/main/resources/fairytale-settings.json
+++ b/src/main/resources/fairytale-settings.json
@@ -76,7 +76,7 @@
       "controller" : "de.braintags.netrelay.controller.filemanager.elfinder.ElFinderController",
       "routes" : [ "/fileManager/api"  ],
       "handlerProperties" : { 
-      	"rootDirectories" : "ROOTVOLUME:/Users/mremme/workspace/vertx/NetRelay-Controller/webroot"
+      	"rootDirectories" : "ROOTVOLUME:webroot"
       }
     },
     {
