adapted system properties

--- a/src/main/resources/KeyGeneratorSettings.json
+++ b/src/main/resources/KeyGeneratorSettings.json
@@ -1,6 +1,6 @@
 {
   "edited" : true,
-  "keyGeneratorClass" : "de.braintags.io.vertx.keygenerator.impl.MongoKeyGenerator",
+  "keyGeneratorClass" : "de.braintags.vertx.keygenerator.impl.MongoKeyGenerator",
   "generatorProperties" : {
     "db_name" : "KeygeneratoDb",
     "startMongoLocal" : "false",
